--- a/config/dev/.env
+++ b/config/dev/.env
@@ -1,3 +1,4 @@
 DEV_DATABASE_URI=root:root1234@tcp(127.0.0.1:3306)/movies?parseTime=true
-REDIS_URI=
+REDIS_URI=redis://localhost:6379/0
+### redis uri: redis://localhost:6379/0 ###
 # # # root:root1234@tcp(127.0.0.1:3306)/movies?parseTime=true # # #
